--- a/2x2CRM.mvc/Views/Issue/MyIssues.cshtml
+++ b/2x2CRM.mvc/Views/Issue/MyIssues.cshtml
@@ -54,15 +54,6 @@
         float: right;
     }
 
-    /*
-     * The following styles are auto-applied to elements with
-     * transition="modal" when their visibility is toggled
-     * by Vue.js.
-     *
-     * You can easily play with the modal transition by editing
-     * these styles.
-     */
-
     .modal-enter {
         opacity: 0;
     }
@@ -71,11 +62,67 @@
         opacity: 0;
     }
 
-        .modal-enter .modal-container,
-        .modal-leave-active .modal-container {
+    .modal-enter .modal-container,
+    .modal-leave-active .modal-container {
             -webkit-transform: scale(1.1);
             transform: scale(1.1);
         }
+
+    /*TABLE FORMAT*/
+
+    th {
+    background-color: #42b983;
+    color: rgba(255,255,255,0.66);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    }
+
+    .pointer {
+    cursor: pointer;
+    }
+
+
+    td {
+    background-color: #f9f9f9;
+    }
+
+    th, td {
+    min-width: 120px;
+    padding: 10px 20px;
+    }
+
+    th.active {
+    color: #fff;
+    }
+
+    th.active .arrow {
+    opacity: 1;
+    }
+
+    .arrow {
+    display: inline-block;
+    vertical-align: middle;
+    width: 0;
+    height: 0;
+    margin-left: 5px;
+    opacity: 0.66;
+    }
+
+    .arrow.asc {
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-bottom: 4px solid #fff;
+    }
+
+    .arrow.dsc {
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 4px solid #fff;
+    }
+
+
 </style>
 
 <h2>MyIssues</h2>
@@ -98,13 +145,15 @@
     из {{rows}}
     страниц {{pages}}
 
-    <table class="table">
+    <table>
         <tr>
-            <th>
+            <th  v-on:click="sortBy('OpDate')"  :class="{active: sortKey == 'OpDate' }" class="pointer">
                 @Html.DisplayNameFor(model => model.OpDate)
+                <span class="arrow" :class="sortOrders['OpDate'] > 0 ? 'asc' : 'dsc'"> </span>
             </th>
-            <th>
+            <th  v-on:click="sortBy('ClientName')" :class="{active: sortKey == 'ClientName' }"  class="pointer">
                 @Html.DisplayNameFor(model => model.Client)
+                <span class="arrow" :class="sortOrders['ClientName'] > 0 ? 'asc' : 'dsc'"> </span>
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
@@ -125,14 +174,173 @@
         </tr>
     </table>
 
-    <modal v-if="showModal" v-on:close="showModal = false" :Issues.sync="issues" :Issue.sync="currentIssue" :Persons="persons">
+    <modal v-if="showModal" v-on:close="showModal = false" :Issues="issues" :Issue="currentIssue" :Persons="persons">
     </modal>
 </div>
 <script>
 
     Vue.component('v-select', VueSelect.VueSelect);
-    Vue.component('modal',
-    {
+
+    //import VModal from "vue-js-modal";
+    //Vue.component('modal', VueSelect.VueSelect);
+
+    //import VModal from 'vue-js-modal';
+    //Vue.use(VModal);
+
+
+    //Vue.component('vue-js-modal');
+
+    var issueList = new Vue({
+        el: '#issue-list',
+        data:function () {
+            var sortOrders = {};
+            sortOrders['OpDate'] = -1;
+            sortOrders['ClientName'] = 1;
+            return {
+                issues: @Html.Raw(Json.Encode(Model)),
+                filter: "",
+                pageNo: 1,
+                pageRows: 50,
+                pages: 0,
+                rows: 0,
+                showModal: false,
+                currentId: 0,
+                persons:@Html.Raw(Json.Encode(@ViewBag.persons)),
+                currentIssue: {},
+
+                sortKey: '',
+                sortOrders: sortOrders
+            }
+        },
+        computed: {
+            filtered_items: function() {
+                var ret = [];
+                var ret0 = [];
+                var self = this;
+
+                var sortKey = this.sortKey;
+                var order = this.sortOrders[sortKey] || 1;
+
+                ret0 = self.issues.slice();
+
+                if (sortKey) {
+                    ret0 = self.issues.slice().sort(function(a, b) {
+                        return (a[sortKey] === b[sortKey] ? (
+                                    (a['OpDate'] === b['OpDate'] ? (
+                                        (a['ClientName'] === b['ClientName'] ? 0 : a['ClientName'] > b['ClientName'] ? 1 : -1) * self.sortOrders['ClientName'] || 1
+                                    ) : a['OpDate'] > b['OpDate'] ? 1 : -1) * self.sortOrders['OpDate'] || 1
+                            ) : a[sortKey] > b[sortKey] ? 1 : -1) * order;
+                    });
+                }
+
+                ret0 = ret0.filter(function(item) {
+                    return item.ClientName.toLowerCase().indexOf(self.filter.toLowerCase()) !== -1;
+                });
+                ret = ret0.filter(function(item, index) {
+                    return (index >= (0 + (self.pageNo - 1) * self.pageRows) && index < (self.pageNo) * self.pageRows);
+                });
+
+                this.pages = Math.ceil(ret0.length / this.pageRows);
+                self.rows = ret0.length;
+                return ret;
+            },
+            filter1: {
+                get: function() {
+                    return this.filter;
+                },
+                set: function(newValue) {
+                    this.pageNo = 1;
+                    this.filter = newValue;
+                }
+            }
+        },
+        methods: {
+            nextPage: function(event) {
+                if (this.pageNo < this.pages) this.pageNo++;
+            },
+            prevPage: function(event) {
+                if (this.pageNo > 1) this.pageNo--;
+            },
+            sortBy: function (key) {
+                    this.sortKey = key;
+                    this.sortOrders[key] = this.sortOrders[key] * -1;
+            },
+            deleteIssue: function(i) {
+                var result = confirm("Want to delete?");
+                if (!result) return;
+                var xhr = new XMLHttpRequest();
+                xhr.open("GET", "Delete/"+i, true);
+                xhr.onreadystatechange = () => {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        var removeIndex = this.issues.map(function(item) { return item.Id; }).indexOf(Number(i));
+                        ~removeIndex && this.issues.splice(removeIndex, 1);
+                    }
+                };
+                xhr.send();
+            },
+            edit2: function(i) {
+
+                if (i !== 0) {
+                    this.currentId = i;
+                    this.currentIssue = this.issues.find(el => el.Id === i);
+                    fetch('AddOrUpdate2/' + i)
+                        .then(resp => resp.json())
+                        .then(data => {
+                            this.currentIssue.IssueDetails = data.IssueDetails;
+                            this.currentIssue.IssueDetails.push({ Description: "", Hours: 0.00 });
+                            this.currentIssue.Client = this.persons.find((el) => el.Id === data.ClientId);
+                            this.currentIssue.Supporter = this.persons.find((el) => el.Id === data.SuppId);
+                        });
+
+                } else {
+                    this.currentId = 0;
+                    //var tmpIssue = this.items.find(x => true);
+
+                    var tmpIssue = this.issues.reduce((prev, current) => (prev.OpDate > current.OpDate) ? prev : current)
+
+                    var suppId = 0;
+                    var supporter = null;
+                    var clientId    = 0;
+                    var client      = null;
+                    var supporterName = "";
+                    var clientName = "";
+
+                    if (tmpIssue !== null && tmpIssue !== undefined) {
+                        suppId    = tmpIssue.SuppId;
+                        supporter = tmpIssue.Supporter;
+                        supporterName = supporter!==null&&supporter!==undefined?supporter.Name:"";
+
+                        clientId    = tmpIssue.СlientId;
+                        client      = tmpIssue.Client;
+                        clientName = client!==null&&client!==undefined?client.Name:"";
+                    }
+
+                    this.currentIssue = {
+                        Id:0 
+                        ,OpDate:new Date()
+                        ,ClientId:clientId
+                        ,SuppId:suppId
+                        ,IssueDetails:[{Id:0, Description:""}]
+                        ,Client:client
+                        ,Supporter:supporter
+                        ,ClentName:clientName
+                        ,SupporterName:supporterName
+                        ,Date:("0"+new Date().getDate()).slice(-2) +"/"+ ("0"+(new Date().getMonth() + 1)).slice(-2) + "/" + new Date().getFullYear()
+                        ,Name:""
+                    }
+                }
+                this.showModal = true;
+            },
+            show: function() {
+                this.$modal.show('hello-world');
+            },
+            hide: function() {
+                this.$modal.hide('hello-world');
+            }
+        }
+    });
+
+    Vue.component('modal',{
         template: '#modal-template',
         props: ['Issues', 'Issue', 'Persons'],
         data: function () {
@@ -186,7 +394,7 @@
                 }
 
                 var xhr = new XMLHttpRequest();
-                xhr.open("POST", "/Issue/AddOrUpdate", true);
+                xhr.open("POST", "AddOrUpdate", true);
                 xhr.setRequestHeader("Content-type", "application/json; charset=utf-8");
                 xhr.onreadystatechange = () => {
                     if (xhr.readyState === 4 && xhr.status === 200) {
@@ -205,135 +413,9 @@
         }
     });
 
-    //import VModal from "vue-js-modal";
-    //Vue.component('modal', VueSelect.VueSelect);
-
-    //import VModal from 'vue-js-modal';
-    //Vue.use(VModal);
-
-
-    //Vue.component('vue-js-modal');
-
-    var issueList = new Vue({
-        el: '#issue-list',
-        data: {
-            issues: @Html.Raw(Json.Encode(Model)),
-            filter: "",
-            pageNo: 1,
-            pageRows: 40,
-            pages: 0,
-            rows: 0,
-            showModal: false,
-            currentId: 0,
-            persons:@Html.Raw(Json.Encode(@ViewBag.persons)),
-            currentIssue: {}
-        },
-        computed: {
-            filtered_items: function() {
-                var ret = [];
-                var ret0 = [];
-                var self = this;
-                ret0 = self.issues.filter(function(item) {
-                    return item.ClientName.toLowerCase().indexOf(self.filter.toLowerCase()) !== -1;
-                });
-                ret = ret0.filter(function(item, index) {
-                    return (index >= (0 + (self.pageNo - 1) * self.pageRows) && index < (self.pageNo) * self.pageRows);
-                });
-
-                this.pages = Math.ceil(ret0.length / this.pageRows);
-                self.rows = ret0.length;
-                return ret;
-            },
-            filter1: {
-                get: function() {
-                    return this.filter;
-                },
-                set: function(newValue) {
-                    this.pageNo = 1;
-                    this.filter = newValue;
-                }
-            }
-        },
-        methods: {
-            nextPage: function(event) {
-                if (this.pageNo < this.pages) this.pageNo++;
-            },
-            prevPage: function(event) {
-                if (this.pageNo > 1) this.pageNo--;
-            },
-            deleteIssue: function(i) {
-                var xhr = new XMLHttpRequest();
-                xhr.open("GET", "/Issue/Delete/"+i, true);
-                xhr.onreadystatechange = () => {
-                    if (xhr.readyState === 4 && xhr.status === 200) {
-                        var removeIndex = this.issues.map(function(item) { return item.Id; }).indexOf(Number(i));
-                        ~removeIndex && this.issues.splice(removeIndex, 1);
-                    }
-                };
-                xhr.send();
-            },
-            edit2: function(i) {
-
-                if (i !== 0) {
-                    this.currentId = i;
-                    this.currentIssue = this.issues.find(el => el.Id === i);
-                    fetch('http://localhost:64129/Issue/AddOrUpdate2/' + i)
-                        .then(resp => resp.json())
-                        .then(data => {
-                            this.currentIssue.IssueDetails = data.IssueDetails;
-                            this.currentIssue.IssueDetails.push({ Description: "", Hours: 0.00 });
-                            this.currentIssue.Client = this.persons.find((el) => el.Id === data.ClientId);
-                            this.currentIssue.Supporter = this.persons.find((el) => el.Id === data.SuppId);
-                        });
-
-                } else {
-                    this.currentId = 0;
-                    //var tmpIssue = this.items.find(x => true);
-
-                    var tmpIssue = this.issues.reduce((prev, current) => (prev.OpDate > current.OpDate) ? prev : current)
-
-                    var suppId = 0;
-                    var supporter = null;
-                    var clientId    = 0;
-                    var client      = null;
-                    var supporterName = "";
-                    var clientName = "";
-
-                    if (tmpIssue !== null && tmpIssue !== undefined) {
-                        suppId    = tmpIssue.SuppId;
-                        supporter = tmpIssue.Supporter;
-                        supporterName = supporter!==null&&supporter!==undefined?supporter.Name:"";
-
-                        clientId    = tmpIssue.СlientId;
-                        client      = tmpIssue.Client;
-                        clientName = client!==null&&client!==undefined?client.Name:"";
-                     }
-
-                    this.currentIssue = {
-                        Id:0 
-                        ,OpDate:new Date()
-                        ,ClientId:clientId
-                        ,SuppId:suppId
-                        ,IssueDetails:[{Id:0, Description:""}]
-                        ,Client:client
-                        ,Supporter:supporter
-                        ,ClentName:clientName
-                        ,SupporterName:supporterName
-                        ,Date:("0"+new Date().getDate()).slice(-2) +"/"+ ("0"+(new Date().getMonth() + 1)).slice(-2) + "/" + new Date().getFullYear()
-                        ,Name:""
-                    }
-                }
-                this.showModal = true;
-            },
-            show: function() {
-                this.$modal.show('hello-world');
-            },
-            hide: function() {
-                this.$modal.hide('hello-world');
-            }
-        }
-    });
 </script>
+
+
 
 <!-- template for the modal component -->
 <script type="text/x-template" id="modal-template">
